--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<header>
- <p>Welcome to...</p>
- <h1>Some cool web shit!</h1>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Cool Webz stuff</title>
+
+<body>
+
+ <h1>This is so cool</h1>
+ <p>HTML is so powerfull</p>
+ <p>I cant think of anyting to type here.</p>
+
+
+</body>
+
+</html>
