--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
  <p>HTML is so powerfull</p>
  <p>I cant think of anyting to type here.</p>
 
- <h1> This video needs to be here because it makes me happy</h1>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=Lyr6c84d5AI">
+<iframe width="560" height="315" 
+src="https://www.youtube.com/embed/Lyr6c84d5AI"
+title="YouTube video player" frameborder="0" allow="accelerometer;
+autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen>
 </iframe>
 
 
