added header for the happy video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
  <h1>This is so cool</h1>
  <p>HTML is so powerfull</p>
  <p>I cant think of anyting to type here.</p>
+ 
+ <h1> This video needs to be here because it makes me happy! </h1>
 
 <iframe width="560" height="315" 
 src="https://www.youtube.com/embed/Lyr6c84d5AI"
